Provide windows OS build-prod script, tidy up

--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "build-dev": "npm run build-build && npm run run-build-dev",
     "build-prod": "npm run build-build && npm run run-build-prod",
     "start-server-dev": "env-cmd -e dev node ./build/server/out.js",
-    "start-server-prod": "env-cmd -e prod node ./build/server/out.js",
     "watch-client-dev": "env-cmd -e dev nodemon --watch ./src/client --watch ./src/common --ext \"ts,tsx,json\" --exec \"npm run run-build-client-dev\"",
     "watch-server-dev": "env-cmd -e dev nodemon --watch ./src/server --watch ./src/common --ext \"ts,tsx,json\" --exec \"npm run run-build-server-dev && npm run start-server-dev\"",
-    "start": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev\" \"npm run watch-server-dev\"",
-    "start-prod": "npm run build-prod && npm run start-server-prod"
+    "start": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev\" \"npm run watch-server-dev\""
   },
   "author": "",
   "license": "MIT",
