code comments, etc.

--- a/src/client/nginx.conf
+++ b/src/client/nginx.conf
@@ -52,10 +52,12 @@ http {
 
     root /client;
 
+    # Proxy requests to /api to the api service
     location /api {
       proxy_pass http://api;
     }
 
+    # If not to /api, then try serving client files, falling back to /index.html if no match (SPA style)
     location / {
       try_files $uri $uri/ /index.html;
     }
