--- a/src/client/nginx.conf
+++ b/src/client/nginx.conf
@@ -9,6 +9,24 @@ events {
 }
 
 http {
+  # Enable Gzip
+  gzip  on;
+  gzip_http_version 1.0;
+  gzip_comp_level 2;
+  gzip_min_length 1100;
+  gzip_buffers     4 8k;
+  gzip_proxied any;
+  gzip_types
+    text/css
+    text/javascript
+    application/javascript
+
+  gzip_static on;
+
+  gzip_proxied        expired no-cache no-store private auth;
+  gzip_disable        "MSIE [1-6]\.";
+  gzip_vary           on;
+
   map $http_upgrade $connection_upgrade {
     default upgrade;
     '' close;
@@ -47,6 +65,7 @@ http {
   keepalive_timeout  65;
 
   server {
+
     listen 80;
     listen [::]:80;
 
