--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./build && rimraf ./buildScripts/build",
-    "build-build": "npm run clean && tsc -p ./buildScripts/tsconfig.json && cd ./buildScripts && go build ./gzipper.go && cd ../",
+    "build-build": "npm run clean && tsc -p ./buildScripts/tsconfig.json",
+    "build-gzipper": "cd ./buildScripts && go build ./gzipper.go && cd ../",
     "run-build-dev": "env-cmd -e dev node ./buildScripts/build/build.js",
     "run-build-prod": "env-cmd -e prod node ./buildScripts/build/build.js",
     "run-build-client-dev": "env-cmd -e dev node ./buildScripts/build/buildClientScript.js",
