--- a/package.json
+++ b/package.json
@@ -8,21 +8,17 @@
     "clean": "rimraf ./build && rimraf ./buildScripts/build",
     "build-build": "npm run clean && tsc -p ./buildScripts/tsconfig.json",
     "build-gzipper": "cd ./buildScripts && go build ./gzipper.go && cd ../",
-    "run-build-dev": "env-cmd -e dev node ./buildScripts/build/build.js",
-    "run-build-prod": "env-cmd -e prod node ./buildScripts/build/build.js",
-    "run-build-client-dev": "env-cmd -e dev node ./buildScripts/build/buildClientScript.js",
-    "run-build-server-dev": "env-cmd -e dev node ./buildScripts/build/buildServerScript.js",
-    "build-dev": "npm run build-build && npm run run-build-dev",
-    "build-prod": "npm run build-build && npm run run-build-prod",
-    "start-server-dev": "env-cmd -e dev node ./build/server/out.js",
-    "watch-client-dev": "env-cmd -e dev nodemon --watch ./src/client --watch ./src/common --ext \"ts,tsx,json\" --exec \"npm run run-build-client-dev\"",
-    "watch-server-dev": "env-cmd -e dev nodemon --watch ./src/server --watch ./src/common --ext \"ts,tsx,json\" --exec \"npm run run-build-server-dev && npm run start-server-dev\"",
+    "build-dev": "npm run build-build && env-cmd -e dev node ./buildScripts/build/build.js",
+    "build-prod": "npm run build-build && env-cmd -e prod node ./buildScripts/build/build.js",
+    "watch-client-dev": "env-cmd -e dev node ./buildScripts/build/watchClient.js",
+    "watch-server-dev": "env-cmd -e dev node ./buildScripts/build/watchServer.js",
     "start": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev\" \"npm run watch-server-dev\""
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "chokidar": "^3.5.2",
     "concurrently": "^6.5.1",
     "connect-livereload": "^0.6.1",
     "connected-react-router": "^6.9.2",
@@ -46,6 +42,7 @@
     "@types/jsdom": "^16.2.14",
     "@types/livereload": "^0.9.1",
     "@types/node": "^17.0.5",
+    "@types/nodemon": "^1.19.1",
     "@types/react-dom": "^17.0.11",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.13.15",
