--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
-    "chokidar": "^3.5.2",
     "concurrently": "^6.5.1",
     "connect-livereload": "^0.6.1",
     "connected-react-router": "^6.9.2",
@@ -29,7 +28,6 @@
     "history": "^4.10.1",
     "jsdom": "^19.0.0",
     "livereload": "^0.9.3",
-    "nodemon": "^2.0.15",
     "react-router-dom": "^6.2.1",
     "redux-thunk": "^2.4.1",
     "rimraf": "^3.0.2",
@@ -47,6 +45,7 @@
     "env-cmd": "^10.1.0",
     "esbuild": "^0.13.15",
     "pretty-bytes": "^5.6.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "chokidar": "^3.5.2"
   }
 }
