--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,26 @@
 {
   "env": {
     "browser": true,
-    "es2021": true,
-    "node": true
+    "es2021": true
   },
   "extends": [
     "plugin:react/recommended",
     "airbnb"
   ],
+  "ignorePatterns": ["node_modules", "build", "package.json", "package.lock.json", ".env-cmdrc.json"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": 13,
     "sourceType": "module",
-    "project": "./tsconfig/eslint.json",
-    "tsconfigRootDir": "./"
+    "project": "./src/client/tsconfig.json"
   },
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
   "settings": {
     "import/resolver": {
       "node": {
@@ -25,12 +28,8 @@
       }
     }
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint"
-  ],
   "rules": {
-    "semi": "off",
+    "semi": [2, "never"],
     "import/extensions": "off",
     "radix": "off",
     "object-curly-newline": [1, {
@@ -45,10 +44,17 @@
         "multiline": true
       }
     }],
+    "react/function-component-definition": [2, {
+      "namedComponents": "arrow-function",
+      "unnamedComponents": "arrow-function"
+    }],
+    "comma-dangle": ["error", "always-multiline"],
     "nonblock-statement-body-position": ["error", "any"],
     "curly": ["error", "multi-or-nest", "consistent"],
     "max-len": [2, 150],
-    "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
+    "react/jsx-filename-extension": [1, {
+      "extensions": [".ts", ".tsx"]
+    }],
     "@typescript-eslint/no-unused-vars": "warn",
     "no-undef": "off",
     "no-unused-vars": "off",
