--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/history": "^4.7.9",
+    "@types/react-router": "^5.1.17",
     "concurrently": "^6.5.1",
     "connect-livereload": "^0.6.1",
     "connected-react-router": "^6.9.2",
@@ -28,10 +30,12 @@
     "history": "^4.10.1",
     "jsdom": "^19.0.0",
     "livereload": "^0.9.3",
+    "postcss": "^8.4.5",
+    "postcss-modules": "^4.3.0",
+    "react": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "redux-thunk": "^2.4.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.5.4"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/connect-livereload": "^0.6.0",
@@ -42,10 +46,19 @@
     "@types/node": "^17.0.5",
     "@types/nodemon": "^1.19.1",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "chokidar": "^3.5.2",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.13.15",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "pretty-bytes": "^5.6.0",
     "ts-node": "^10.4.0",
-    "chokidar": "^3.5.2"
+    "typescript": "^4.5.4"
   }
 }
