Provide a more fleshed out redux store example. Styling. Code comments. Etc.

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -4,6 +4,11 @@
     "SERVER_PORT": "4001",
     "REQUEST_DELAY_MS": "500"
   },
+  "dev-zen": {
+    "NODE_ENV": "development",
+    "SERVER_PORT": "4001",
+    "BUILD_VERBOSITY": "0"
+  },
   "prod": {
     "NODE_ENV": "production",
     "SERVER_PORT": "4001"
