--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tree-starter",
+  "name": "lab",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,61 +8,66 @@
     "clean": "rimraf ./build && rimraf ./buildScripts/build",
     "build-build": "npm run clean && tsc -p ./buildScripts/tsconfig.json",
     "build-gzipper": "cd ./buildScripts && go build ./gzipper.go && cd ../",
-    "build-dev": "npm run build-build && env-cmd -e dev node ./buildScripts/build/build.js",
-    "build-prod": "npm run build-build && env-cmd -e prod node ./buildScripts/build/build.js",
-    "watch-client-dev": "env-cmd -e dev node ./buildScripts/build/watchClient.js",
-    "watch-server-dev": "env-cmd -e dev node ./buildScripts/build/watchServer.js",
-    "watch-client-dev-zen": "env-cmd -e dev-zen node ./buildScripts/build/watchClient.js",
-    "watch-server-dev-zen": "env-cmd -e dev-zen node ./buildScripts/build/watchServer.js",
+    "build-dev": "npm run build-build && env-cmd -e dev node ./buildScripts/build/buildScripts/build.js",
+    "build-prod": "npm run build-build && env-cmd -e prod node ./buildScripts/build/buildScripts/build.js",
+    "watch-client-dev": "env-cmd -e dev node ./buildScripts/build/buildScripts/watchClient.js",
+    "watch-server-dev": "env-cmd -e dev node ./buildScripts/build/buildScripts/watchServer.js",
+    "watch-client-dev-zen": "env-cmd -e dev-zen node ./buildScripts/build/buildScripts/watchClient.js",
+    "watch-server-dev-zen": "env-cmd -e dev-zen node ./buildScripts/build/buildScripts/watchServer.js",
     "start": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev\" \"npm run watch-server-dev\"",
-    "start-zen": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev-zen\" \"npm run watch-server-dev-zen\""
+    "start-zen": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev-zen\" \"npm run watch-server-dev-zen\"",
+    "start-server-debug": "node './build/server/out.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
     "@types/history": "^4.7.11",
+    "@reduxjs/toolkit": "^1.7.2",
     "ajax": "^0.0.4",
     "concurrently": "^7.0.0",
     "connect-livereload": "^0.6.1",
-    "connected-react-router": "^6.9.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "esbuild-plugin-sass": "^1.0.1",
-    "esbuild-sass-plugin": "^2.0.3",
-    "express": "^4.17.2",
-    "history": "^4.7.2",
+    "esbuild-sass-plugin": "^2.2.3",
+    "express": "^4.17.3",
     "jsdom": "^19.0.0",
     "livereload": "^0.9.3",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.6",
     "postcss-modules": "^4.3.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "redux-thunk": "^2.4.1",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.2"
+    "rxjs": "^7.5.4"
   },
   "devDependencies": {
     "@types/connect-livereload": "^0.6.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/jsdom": "^16.2.14",
     "@types/livereload": "^0.9.1",
-    "@types/node": "^17.0.10",
+    "@types/node": "^17.0.19",
     "@types/nodemon": "^1.19.1",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@types/react-router": "^5.1.18",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "chokidar-debounced": "^1.0.2",
     "chokidar": "^3.5.3",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.14.13",
-    "eslint": "^8.7.0",
+    "esbuild": "^0.14.23",
+    "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "pretty-bytes": "^5.6.0",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
 }
