--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -5,6 +5,9 @@
     "../common",
     "./"
   ],
+  "exclude": [
+    "**/*.sql"
+  ],
   "compilerOptions": {
     "target": "es2017",
     "declaration": false,
