--- a/buildScripts/tsconfig.json
+++ b/buildScripts/tsconfig.json
@@ -2,7 +2,8 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "include": [
-    "./"
+    "./",
+    "../src/common/function.ts"
   ],
   "compilerOptions": {
     "target": "es2017",
