--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,13 @@ services:
     build:
       context: ./src/client
     ports:
-    - "8080:80"
+    - "80:80"
   api:
     container_name: api
     user: node
     build:
       context: ./src/server
-    environment:
-      - SERVER_PORT=80
-      - NODE_ENV=production
+    env_file:
+      - ./prod.env
     ports:
-    - "4000:80"
+    - "81:80"
