--- a/src/client/nginx.conf
+++ b/src/client/nginx.conf
@@ -76,6 +76,11 @@ http {
       proxy_pass http://api;
     }
 
+    # Proxy requests to /api to the api service
+    location /content {
+      proxy_pass http://api/content;
+    }
+
     # If not to /api, then try serving client files, falling back to /index.html if no match (SPA style)
     location / {
       try_files $uri $uri/ /index.html;
