--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true
 	}
 }
