--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build-unit-tests": "npx tsc -p ./src/tsconfig.test.json",
+    "run-unit-tests": "jest",
+    "unit-tests": "npm run build-unit-tests && npm run run-unit-tests",
+    "lint": "eslint -c .eslintrc.json ./src --ext .ts,.tsx",
+    "lint-errors-only": "eslint -c .eslintrc.json ./src --ext .ts,.tsx --quiet",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./build && rimraf ./buildScripts/build",
     "build-build": "npm run clean && tsc -p ./buildScripts/tsconfig.json",
@@ -16,18 +21,23 @@
     "watch-server-dev-zen": "env-cmd -e dev-zen node ./buildScripts/build/buildScripts/watchServer.js",
     "start": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev\" \"npm run watch-server-dev\"",
     "start-zen": "npm run build-build && concurrently -n \"ui ,api\" -c \"cyan,blue\" \"npm run watch-client-dev-zen\" \"npm run watch-server-dev-zen\"",
-    "start-server-debug": "node './build/server/out.js"
+    "start-server-debug": "node './build/server/out.js",
+    "build-tsc-client": "tsc -p ./src/client/tsconfig.json",
+    "build-tsc-server": "tsc -p ./src/server/tsconfig.json",
+    "build-tsc": "(npm run build-tsc-server && npm run build-tsc-client) || exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/history": "^4.7.11",
     "@reduxjs/toolkit": "^1.7.2",
+    "@types/history": "^4.7.11",
     "ajax": "^0.0.4",
     "concurrently": "^7.0.0",
     "connect-livereload": "^0.6.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
+    "esbuild": "^0.14.23",
     "esbuild-plugin-sass": "^1.0.1",
     "esbuild-sass-plugin": "^2.2.3",
     "express": "^4.17.3",
@@ -46,9 +56,11 @@
   },
   "devDependencies": {
     "@types/connect-livereload": "^0.6.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/jest": "^28.1.1",
     "@types/jsdom": "^16.2.14",
     "@types/livereload": "^0.9.1",
     "@types/node": "^17.0.19",
@@ -58,16 +70,15 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "chokidar-debounced": "^1.0.2",
     "chokidar": "^3.5.3",
-    "env-cmd": "^10.1.0",
-    "esbuild": "^0.14.23",
+    "chokidar-debounced": "^1.0.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^28.1.1",
     "typescript": "^4.5.5"
   }
 }
