rewrite to be simpler and higher quality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
     "*.txt",
     "*.env",
     "*.md",
-    "*.bat"
+    "*.bat",
+    "*.js"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
