--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-node_modules
-build
-build-test
-buildScripts/build
+/node_modules
+/build
+/build-test
+/buildScripts/build
 .DS_Store
-debug.log
-buildScripts/gzipper
-buildScripts/gzipper.exe
-package-lock.json
+/debug.log
+/package-lock.json
+auth.json
+/pgdata
+/import/**/*
+/content
