--- a/buildScripts/tsconfig.json
+++ b/buildScripts/tsconfig.json
@@ -2,14 +2,12 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "include": [
-    "./",
-    "../src/common/function.ts"
+    "./"
   ],
   "compilerOptions": {
-    "target": "es2017",
     "module": "commonjs",
-    "declaration": true,
-    "sourceMap": true,
+    "declaration": false,
+    "sourceMap": false,
     "noEmit": false,
     "skipLibCheck": true,
     "outDir": "./build"
