--- a/src/common/tsconfig.json
+++ b/src/common/tsconfig.json
@@ -2,11 +2,12 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../../tsconfig.json",
   "include": [
-    "../common/**/*",
     "./**/*"
   ],
   "compilerOptions": {
-    "jsx": "react",
-    "outDir": "../../build/client"
+    "declaration": false,
+    "sourceMap": false,
+    "noEmit": false,
+    "outDir": "../../build/common"
   }
 }
